--- a/packages/freshchat-api/package.json
+++ b/packages/freshchat-api/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@jaya-app/freshchat-api",
-  "version": "0.0.9",
+  "name": "@freshworks-jaya/freshchat-api",
+  "version": "0.0.16",
   "description": "Provides simple interface for accessing Freshchat's public APIs",
   "repository": "git@github.com:arunrajkumar235/jaya-app.git",
   "main": "lib/index.js",
@@ -9,6 +9,8 @@
     "access": "public"
   },
   "scripts": {
+    "coverage": "codecov",
+    "test": "nyc --reporter=lcov mocha -r ts-node/register test/**/*.test.ts",
     "build": "tsc",
     "format": "prettier --write \"src/**/*.ts\"",
     "build:check": "tsc --noEmit",
@@ -20,12 +22,23 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/chai": "^4.2.11",
+    "@types/chai-as-promised": "^7.1.2",
+    "@types/mocha": "^7.0.2",
+    "@types/node": "^13.11.0",
     "@typescript-eslint/eslint-plugin": "^2.25.0",
     "@typescript-eslint/parser": "^2.25.0",
+    "chai": "^4.2.0",
+    "chai-as-promised": "^7.1.1",
+    "codecov": "^3.6.5",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.1",
     "eslint-plugin-prettier": "^3.1.2",
+    "mocha": "^7.1.1",
+    "nock": "^12.0.3",
+    "nyc": "^15.0.1",
     "prettier": "^2.0.2",
+    "ts-node": "^8.8.1",
     "typescript": "^3.8.3"
   },
   "dependencies": {
