--- a/packages/rule-engine/package.json
+++ b/packages/rule-engine/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@jaya-app/rule-engine",
-  "version": "0.0.13",
+  "name": "@freshworks-jaya/rule-engine",
+  "version": "0.0.30",
   "description": "Provides methods to process rules in product events in marketplace app",
   "repository": "git@github.com:arunrajkumar235/jaya-app.git",
   "main": "lib/index.js",
@@ -9,6 +9,8 @@
     "access": "public"
   },
   "scripts": {
+    "coverage": "codecov",
+    "test": "nyc --reporter=lcov mocha -r ts-node/register test/**/*.test.ts",
     "build": "tsc",
     "format": "prettier --write \"src/**/*.ts\"",
     "build:check": "tsc --noEmit",
@@ -20,17 +22,25 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/chai": "^4.2.11",
+    "@types/mocha": "^7.0.2",
+    "@types/node": "^13.11.0",
     "@typescript-eslint/eslint-plugin": "^2.25.0",
     "@typescript-eslint/parser": "^2.25.0",
+    "chai": "^4.2.0",
+    "codecov": "^3.6.5",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.1",
     "eslint-plugin-prettier": "^3.1.2",
+    "mocha": "^7.1.1",
+    "nyc": "^15.0.1",
     "prettier": "^2.0.2",
+    "ts-node": "^8.8.1",
     "typescript": "^3.8.3"
   },
   "dependencies": {
-    "@jaya-app/freshchat-api": "^0.0.9",
-    "@jaya-app/kairos-api": "^0.0.9",
-    "@jaya-app/marketplace-models": "^0.0.11"
+    "@freshworks-jaya/freshchat-api": "^0.0.16",
+    "@freshworks-jaya/kairos-api": "^0.0.10",
+    "@freshworks-jaya/marketplace-models": "^0.0.12"
   }
 }
