--- a/packages/freshchat-api/package.json
+++ b/packages/freshchat-api/package.json
@@ -2,7 +2,7 @@
   "name": "@freshworks-jaya/freshchat-api",
   "version": "0.0.16",
   "description": "Provides simple interface for accessing Freshchat's public APIs",
-  "repository": "git@github.com:arunrajkumar235/jaya-app.git",
+  "repository": "git@github.com:freshdesk/jaya-lib.git",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "publishConfig": {
