--- a/packages/marketplace-models/package.json
+++ b/packages/marketplace-models/package.json
@@ -2,7 +2,7 @@
   "name": "@freshworks-jaya/marketplace-models",
   "version": "0.0.12",
   "description": "Provides type definitions for models in marketplace product events",
-  "repository": "git@github.com:arunrajkumar235/jaya-app.git",
+  "repository": "git@github.com:freshdesk/jaya-lib.git",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "publishConfig": {
