--- a/packages/rule-engine/package.json
+++ b/packages/rule-engine/package.json
@@ -2,7 +2,7 @@
   "name": "@freshworks-jaya/rule-engine",
   "version": "0.0.30",
   "description": "Provides methods to process rules in product events in marketplace app",
-  "repository": "git@github.com:arunrajkumar235/jaya-app.git",
+  "repository": "git@github.com:freshdesk/jaya-lib.git",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "publishConfig": {
