--- a/packages/freshchat-api/package.json
+++ b/packages/freshchat-api/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.17",
   "description": "Provides simple interface for accessing Freshchat's public APIs",
   "repository": "git@github.com:freshdesk/jaya-lib.git",
-  "main": "lib/index.js",
-  "types": "lib/index.d.ts",
+  "main": "lib/src/index.js",
+  "types": "lib/src/index.d.ts",
   "publishConfig": {
     "access": "public"
   },
