--- a/packages/rule-engine/package.json
+++ b/packages/rule-engine/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.31",
   "description": "Provides methods to process rules in product events in marketplace app",
   "repository": "git@github.com:freshdesk/jaya-lib.git",
-  "main": "lib/index.js",
-  "types": "lib/index.d.ts",
+  "main": "lib/src/index.js",
+  "types": "lib/src/index.d.ts",
   "publishConfig": {
     "access": "public"
   },
@@ -39,8 +39,8 @@
     "typescript": "^3.8.3"
   },
   "dependencies": {
+    "@freshworks-jaya/marketplace-models": "^0.0.13",
     "@freshworks-jaya/freshchat-api": "^0.0.17",
-    "@freshworks-jaya/kairos-api": "^0.0.11",
-    "@freshworks-jaya/marketplace-models": "^0.0.13"
+    "@freshworks-jaya/kairos-api": "^0.0.11"
   }
 }
