--- a/packages/rule-engine/package.json
+++ b/packages/rule-engine/package.json
@@ -25,6 +25,7 @@
     "@types/chai": "^4.2.11",
     "@types/mocha": "^7.0.2",
     "@types/node": "^13.11.0",
+    "@types/sinon": "^9.0.0",
     "@typescript-eslint/eslint-plugin": "^2.25.0",
     "@typescript-eslint/parser": "^2.25.0",
     "chai": "^4.2.0",
@@ -35,6 +36,7 @@
     "mocha": "^7.1.1",
     "nyc": "^15.0.1",
     "prettier": "^2.0.2",
+    "sinon": "^9.0.1",
     "ts-node": "^8.8.1",
     "typescript": "^3.8.3"
   },
