--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "packages/*"
   ],
   "scripts": {
+    "build": "lerna run build --no-private",
+    "test": "lerna run test --no-private --stream --concurrency 1",
     "lint": "eslint '*/**/*.ts' --quiet --fix",
     "lint:watch": "esw '*/**/*.ts' --fix -w",
     "tsc": "tsc -b ./packages/rule-engine ./packages/marketplace-models ./packages/freshchat-api ./packages/kairos-api",
@@ -16,7 +18,6 @@
     "@typescript-eslint/eslint-plugin": "^2.25.0",
     "@typescript-eslint/parser": "^2.25.0",
     "eslint": "^6.8.0",
-    "eslint-config-airbnb-typescript": "^6.3.1",
     "eslint-config-prettier": "^6.10.1",
     "eslint-import-resolver-typescript": "^2.0.0",
     "eslint-plugin-import": "^2.20.2",
