--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "eslint-import-resolver-typescript": "^2.0.0",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-prettier": "^3.1.2",
+    "eslint-plugin-typescript-sort-keys": "^0.8.0",
     "lerna": "^3.20.2",
     "prettier": "^2.0.2",
     "typescript": "^3.8.3"
