--- a/packages/rule-engine/package.json
+++ b/packages/rule-engine/package.json
@@ -1,10 +1,10 @@
 {
   "name": "@freshworks-jaya/rule-engine",
-  "version": "0.0.33",
+  "version": "0.0.34",
   "description": "Provides methods to process rules in product events in marketplace app",
   "repository": "git@github.com:freshdesk/jaya-lib.git",
-  "main": "lib/src/index.js",
-  "types": "lib/src/index.d.ts",
+  "main": "lib/index.js",
+  "types": "lib/index.d.ts",
   "publishConfig": {
     "access": "public"
   },
@@ -12,11 +12,9 @@
     "coverage": "codecov",
     "test": "nyc --reporter=lcov mocha -r ts-node/register test/**/*.test.ts",
     "build": "tsc",
-    "format": "prettier --write \"src/**/*.ts\"",
     "build:check": "tsc --noEmit",
     "lint": "tsc --noEmit && eslint '*/**/*.ts' --quiet --fix",
-    "prepare": "npm run build",
-    "preversion": "npm run lint"
+    "prepare": "npm run build"
   },
   "keywords": [],
   "author": "",
@@ -26,23 +24,17 @@
     "@types/mocha": "^7.0.2",
     "@types/node": "^13.11.0",
     "@types/sinon": "^9.0.0",
-    "@typescript-eslint/eslint-plugin": "^2.25.0",
-    "@typescript-eslint/parser": "^2.25.0",
     "chai": "^4.2.0",
     "codecov": "^3.6.5",
-    "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.10.1",
-    "eslint-plugin-prettier": "^3.1.2",
     "mocha": "^7.1.1",
     "nyc": "^15.0.1",
-    "prettier": "^2.0.2",
     "sinon": "^9.0.1",
     "ts-node": "^8.8.1",
     "typescript": "^3.8.3"
   },
   "dependencies": {
-    "@freshworks-jaya/freshchat-api": "^0.0.18",
-    "@freshworks-jaya/kairos-api": "^0.0.12",
-    "@freshworks-jaya/marketplace-models": "^0.0.14"
+    "@freshworks-jaya/freshchat-api": "^0.0.19",
+    "@freshworks-jaya/kairos-api": "^0.0.13",
+    "@freshworks-jaya/marketplace-models": "^0.0.15"
   }
 }
