--- a/packages/rule-engine/package.json
+++ b/packages/rule-engine/package.json
@@ -26,9 +26,11 @@
     "@types/sinon": "^9.0.0",
     "chai": "^4.2.0",
     "codecov": "^3.6.5",
+    "dayjs": "^1.8.23",
     "mocha": "^7.1.1",
     "nyc": "^15.0.1",
     "sinon": "^9.0.1",
+    "timezone-support": "^2.0.2",
     "ts-node": "^8.8.1",
     "typescript": "^3.8.3"
   },
