--- a/packages/utilities/package.json
+++ b/packages/utilities/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@freshworks-jaya/rule-engine",
-  "version": "0.0.35",
-  "description": "Provides methods to process rules in product events in marketplace app",
+  "name": "@freshworks-jaya/utilities",
+  "version": "0.0.1",
+  "description": "Provides a function that can replace placeholders in a string with a given map.",
   "repository": "git@github.com:freshdesk/jaya-lib.git",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -23,7 +23,6 @@
     "@types/chai": "^4.2.11",
     "@types/mocha": "^7.0.2",
     "@types/node": "^13.11.0",
-    "@types/sinon": "^9.0.0",
     "chai": "^4.2.0",
     "codecov": "^3.6.5",
     "mocha": "^7.1.1",
@@ -31,11 +30,5 @@
     "sinon": "^9.0.1",
     "ts-node": "^8.8.1",
     "typescript": "^3.8.3"
-  },
-  "dependencies": {
-    "@freshworks-jaya/freshchat-api": "^0.0.20",
-    "@freshworks-jaya/kairos-api": "^0.0.14",
-    "@freshworks-jaya/marketplace-models": "^0.0.16",
-    "@freshworks-jaya/utilities": "0.0.1"
   }
 }
