--- a/package.json
+++ b/package.json
@@ -23,8 +23,21 @@
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-typescript-sort-keys": "^0.8.0",
+    "husky": "^4.2.3",
     "lerna": "^3.20.2",
+    "lint-staged": "^10.1.2",
     "prettier": "^2.0.2",
     "typescript": "^3.8.3"
+  },
+  "lint-staged": {
+    "*.ts": [
+      "tsc --noEmit true",
+      "eslint"
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
   }
 }
