--- a/packages/rule-engine/package.json
+++ b/packages/rule-engine/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@freshworks-jaya/rule-engine",
-  "version": "0.0.35",
+  "version": "0.0.36-alpha.0",
   "description": "Provides methods to process rules in product events in marketplace app",
   "repository": "git@github.com:freshdesk/jaya-lib.git",
   "main": "lib/index.js",
@@ -35,8 +35,8 @@
     "typescript": "^3.8.3"
   },
   "dependencies": {
-    "@freshworks-jaya/freshchat-api": "^0.0.20",
-    "@freshworks-jaya/kairos-api": "^0.0.14",
-    "@freshworks-jaya/marketplace-models": "^0.0.16"
+    "@freshworks-jaya/freshchat-api": "^0.0.21-alpha.0",
+    "@freshworks-jaya/kairos-api": "^0.0.15-alpha.0",
+    "@freshworks-jaya/marketplace-models": "^0.0.17-alpha.0"
   }
 }
