--- a/packages/freshchat-api/package.json
+++ b/packages/freshchat-api/package.json
@@ -10,7 +10,7 @@
   },
   "scripts": {
     "coverage": "codecov",
-    "test": "nyc --reporter=lcov mocha -r ts-node/register test/**/*.test.ts",
+    "test": "nyc --reporter=lcov mocha",
     "build": "tsc",
     "format": "prettier --write \"src/**/*.ts\"",
     "build:check": "tsc --noEmit",
@@ -22,6 +22,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@istanbuljs/nyc-config-typescript": "^1.0.1",
     "@types/chai": "^4.2.11",
     "@types/chai-as-promised": "^7.1.2",
     "@types/mocha": "^7.0.2",
@@ -33,6 +34,7 @@
     "nock": "^12.0.3",
     "nyc": "^15.0.1",
     "ts-node": "^8.8.1",
+    "source-map-support": "^0.5.16",
     "typescript": "^3.8.3"
   },
   "dependencies": {
