--- a/packages/utilities/package.json
+++ b/packages/utilities/package.json
@@ -10,7 +10,7 @@
   },
   "scripts": {
     "coverage": "codecov",
-    "test": "nyc --reporter=lcov mocha -r ts-node/register test/**/*.test.ts",
+    "test": "nyc --reporter=lcov mocha",
     "build": "tsc",
     "build:check": "tsc --noEmit",
     "lint": "tsc --noEmit && eslint '*/**/*.ts' --quiet --fix",
@@ -20,6 +20,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@istanbuljs/nyc-config-typescript": "^1.0.1",
     "@types/chai": "^4.2.11",
     "@types/mocha": "^7.0.2",
     "@types/node": "^13.11.0",
@@ -29,6 +30,7 @@
     "nyc": "^15.0.1",
     "sinon": "^9.0.1",
     "ts-node": "^8.8.1",
+    "source-map-support": "^0.5.16",
     "typescript": "^3.8.3"
   }
 }
