--- a/packages/rule-engine/package.json
+++ b/packages/rule-engine/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@freshworks-jaya/rule-engine",
-  "version": "0.0.35",
+  "version": "0.0.36",
   "description": "Provides methods to process rules in product events in marketplace app",
   "repository": "git@github.com:freshdesk/jaya-lib.git",
   "main": "lib/index.js",
@@ -35,9 +35,9 @@
     "typescript": "^3.8.3"
   },
   "dependencies": {
-    "@freshworks-jaya/freshchat-api": "^0.0.20",
-    "@freshworks-jaya/kairos-api": "^0.0.14",
-    "@freshworks-jaya/marketplace-models": "^0.0.16",
-    "@freshworks-jaya/utilities": "0.0.1"
+    "@freshworks-jaya/freshchat-api": "^0.0.21",
+    "@freshworks-jaya/kairos-api": "^0.0.15",
+    "@freshworks-jaya/marketplace-models": "^0.0.17",
+    "@freshworks-jaya/utilities": "^0.0.2"
   }
 }
