changed the pre-commit behaviour

--- a/package.json
+++ b/package.json
@@ -31,13 +31,12 @@
   },
   "lint-staged": {
     "*.ts": [
-      "tsc --noEmit true",
       "eslint"
     ]
   },
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged"
+      "pre-commit": "lint-staged && yarn build"
     }
   }
 }
