--- a/packages/utilities/package.json
+++ b/packages/utilities/package.json
@@ -26,10 +26,12 @@
     "@types/node": "^13.11.0",
     "chai": "^4.2.0",
     "codecov": "^3.6.5",
+    "dayjs": "^1.8.23",
     "mocha": "^7.1.1",
     "nyc": "^15.0.1",
     "sinon": "^9.0.1",
     "source-map-support": "^0.5.16",
+    "timezone-support": "^2.0.2",
     "ts-node": "^8.8.1",
     "typescript": "^3.8.3"
   }
