--- a/packages/tsconfig.json
+++ b/packages/tsconfig.json
@@ -10,7 +10,7 @@
     { "path": "freshchat-api/src" },
     { "path": "kairos-api/src" },
     { "path": "marketplace-models/src" },
-    { "path": "rule-engine/src" },
-    { "path": "utilities/src" }
+    { "path": "utilities/src" },
+    { "path": "rule-engine/src" }
   ]
 }
