--- a/packages/rule-engine/package.json
+++ b/packages/rule-engine/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@freshworks-jaya/rule-engine",
-  "version": "0.0.40",
+  "version": "0.0.41",
   "description": "Provides methods to process rules in product events in marketplace app",
   "repository": "git@github.com:freshdesk/jaya-lib.git",
   "main": "lib/index.js",
@@ -36,10 +36,10 @@
     "typescript": "^3.8.3"
   },
   "dependencies": {
-    "bluebird": "^3.7.2",
     "@freshworks-jaya/freshchat-api": "^0.0.24",
     "@freshworks-jaya/kairos-api": "^0.0.18",
     "@freshworks-jaya/marketplace-models": "^0.0.19",
-    "@freshworks-jaya/utilities": "^0.0.4"
+    "@freshworks-jaya/utilities": "^0.0.4",
+    "bluebird": "^3.7.2"
   }
 }
