--- a/packages/rule-engine/package.json
+++ b/packages/rule-engine/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@freshworks-jaya/rule-engine",
-  "version": "0.0.42",
+  "version": "0.0.43",
   "description": "Provides methods to process rules in product events in marketplace app",
   "repository": "git@github.com:freshdesk/jaya-lib.git",
   "main": "lib/index.js",
@@ -40,7 +40,7 @@
     "@freshworks-jaya/kairos-api": "^0.0.18",
     "@freshworks-jaya/marketplace-models": "^0.0.19",
     "@freshworks-jaya/utilities": "^0.0.5",
-    "bluebird": "^3.7.2",
-    "axios": "^0.19.2"
+    "axios": "^0.19.2",
+    "bluebird": "^3.7.2"
   }
 }
