--- a/packages/utilities/package.json
+++ b/packages/utilities/package.json
@@ -30,11 +30,11 @@
     "nyc": "^15.0.1",
     "sinon": "^9.0.1",
     "source-map-support": "^0.5.16",
-    "timezone-support": "^2.0.2",
     "ts-node": "^8.8.1",
     "typescript": "^3.8.3"
   },
   "dependencies": {
-    "dayjs": "^1.8.23"
+    "dayjs": "^1.8.23",
+    "timezone-support": "^2.0.2"
   }
 }
