--- a/packages/rule-engine/package.json
+++ b/packages/rule-engine/package.json
@@ -29,6 +29,7 @@
     "chai": "^4.2.0",
     "codecov": "^3.6.5",
     "mocha": "^7.1.1",
+    "nock": "^12.0.3",
     "nyc": "^15.0.1",
     "sinon": "^9.0.1",
     "source-map-support": "^0.5.16",
