--- a/packages/rule-engine/package.json
+++ b/packages/rule-engine/package.json
@@ -23,10 +23,12 @@
     "@istanbuljs/nyc-config-typescript": "^1.0.1",
     "@types/bluebird": "^3.5.30",
     "@types/chai": "^4.2.11",
+    "@types/chai-as-promised": "^7.1.2",
     "@types/mocha": "^7.0.2",
     "@types/node": "^13.11.0",
     "@types/sinon": "^9.0.0",
     "chai": "^4.2.0",
+    "chai-as-promised": "^7.1.1",
     "codecov": "^3.6.5",
     "mocha": "^7.1.1",
     "nock": "^12.0.3",
