--- a/packages/rule-engine/package.json
+++ b/packages/rule-engine/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@freshworks-jaya/rule-engine",
-  "version": "0.0.47-aplhpa.6",
+  "version": "0.0.47-aplhpa.11",
   "description": "Provides methods to process rules in product events in marketplace app",
   "repository": "git@github.com:freshdesk/jaya-lib.git",
   "main": "lib/index.js",
@@ -42,7 +42,7 @@
     "@freshworks-jaya/freshchat-api": "^0.0.25",
     "@freshworks-jaya/kairos-api": "^0.0.19",
     "@freshworks-jaya/marketplace-models": "^0.0.20",
-    "@freshworks-jaya/utilities": "^0.0.7",
+    "@freshworks-jaya/utilities": "^0.0.8-aplhpa.1",
     "axios": "^0.19.2",
     "bluebird": "^3.7.2"
   }
