--- a/packages/rule-engine/package.json
+++ b/packages/rule-engine/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@freshworks-jaya/rule-engine",
-  "version": "0.0.46",
+  "version": "0.0.47-beta.0",
   "description": "Provides methods to process rules in product events in marketplace app",
   "repository": "git@github.com:freshdesk/jaya-lib.git",
   "main": "lib/index.js",
@@ -37,9 +37,9 @@
     "typescript": "^3.8.3"
   },
   "dependencies": {
-    "@freshworks-jaya/freshchat-api": "^0.0.25",
-    "@freshworks-jaya/kairos-api": "^0.0.19",
-    "@freshworks-jaya/marketplace-models": "^0.0.20",
-    "@freshworks-jaya/utilities": "^0.0.7"
+    "@freshworks-jaya/freshchat-api": "^0.0.26-alpha.0",
+    "@freshworks-jaya/kairos-api": "^0.0.20-alpha.0",
+    "@freshworks-jaya/marketplace-models": "^0.0.21-alpha.0",
+    "@freshworks-jaya/utilities": "^0.0.8-alpha.0"
   }
 }
