--- a/packages/rule-engine/package.json
+++ b/packages/rule-engine/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@freshworks-jaya/rule-engine",
-  "version": "0.0.46",
+  "version": "0.0.47-aplhpa.12",
   "description": "Provides methods to process rules in product events in marketplace app",
   "repository": "git@github.com:freshdesk/jaya-lib.git",
   "main": "lib/index.js",
@@ -23,13 +23,17 @@
   "license": "ISC",
   "devDependencies": {
     "@istanbuljs/nyc-config-typescript": "^1.0.1",
+    "@types/bluebird": "^3.5.30",
     "@types/chai": "^4.2.11",
+    "@types/chai-as-promised": "^7.1.2",
     "@types/mocha": "^7.0.2",
     "@types/node": "^13.11.0",
     "@types/sinon": "^9.0.0",
     "chai": "^4.2.0",
+    "chai-as-promised": "^7.1.1",
     "codecov": "^3.6.5",
     "mocha": "^7.1.1",
+    "nock": "^12.0.3",
     "nyc": "^15.0.1",
     "sinon": "^9.0.1",
     "source-map-support": "^0.5.16",
@@ -40,6 +44,8 @@
     "@freshworks-jaya/freshchat-api": "^0.0.25",
     "@freshworks-jaya/kairos-api": "^0.0.19",
     "@freshworks-jaya/marketplace-models": "^0.0.20",
-    "@freshworks-jaya/utilities": "^0.0.7"
+    "@freshworks-jaya/utilities": "^0.0.8-aplhpa.1",
+    "axios": "^0.19.2",
+    "bluebird": "^3.7.2"
   }
 }
