--- a/packages/utilities/package.json
+++ b/packages/utilities/package.json
@@ -34,5 +34,9 @@
     "source-map-support": "^0.5.16",
     "ts-node": "^8.8.1",
     "typescript": "^3.8.3"
+  },
+  "dependencies": {
+    "dayjs": "^1.8.23",
+    "timezone-support": "^2.0.2"
   }
 }
