--- a/packages/rule-engine/package.json
+++ b/packages/rule-engine/package.json
@@ -44,7 +44,7 @@
     "@freshworks-jaya/freshchat-api": "^0.1.0",
     "@freshworks-jaya/kairos-api": "^0.1.0",
     "@freshworks-jaya/marketplace-models": "^0.1.0",
-    "@freshworks-jaya/utilities": "^0.0.8-aplhpa.1",
+    "@freshworks-jaya/utilities": "^0.1.0",
     "axios": "^0.19.2",
     "bluebird": "^3.7.2"
   }
