--- a/packages/utilities/package.json
+++ b/packages/utilities/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@freshworks-jaya/utilities",
-  "version": "0.1.0",
+  "version": "0.2.0-alpha.0",
   "description": "Provides a function that can replace placeholders in a string with a given map.",
   "repository": "git@github.com:freshdesk/jaya-lib.git",
   "main": "lib/index.js",
