--- a/packages/rule-engine/package.json
+++ b/packages/rule-engine/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@freshworks-jaya/rule-engine",
-  "version": "0.3.0-alpha.1",
+  "version": "0.3.0-alpha.2",
   "description": "Provides methods to process rules in product events in marketplace app",
   "repository": "git@github.com:freshdesk/jaya-lib.git",
   "main": "lib/index.js",
@@ -44,7 +44,7 @@
     "@freshworks-jaya/freshchat-api": "^0.3.0",
     "@freshworks-jaya/kairos-api": "^0.1.0",
     "@freshworks-jaya/marketplace-models": "^0.1.1",
-    "@freshworks-jaya/utilities": "^0.1.0",
+    "@freshworks-jaya/utilities": "^0.2.0-alpha.0",
     "axios": "^0.19.2",
     "bluebird": "^3.7.2"
   }
