--- a/packages/marketplace-models/package.json
+++ b/packages/marketplace-models/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@freshworks-jaya/marketplace-models",
-  "version": "0.1.2-alpha.0",
+  "version": "0.1.2",
   "description": "Provides type definitions for models in marketplace product events",
   "repository": "git@github.com:freshdesk/jaya-lib.git",
   "main": "lib/index.js",
