--- a/packages/freshchat-api/package.json
+++ b/packages/freshchat-api/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@freshworks-jaya/freshchat-api",
-  "version": "0.7.0-alpha.5",
+  "version": "0.7.0-alpha.6",
   "description": "Provides simple interface for accessing Freshchat's public APIs",
   "repository": "git@github.com:freshdesk/jaya-lib.git",
   "main": "lib/index.js",
@@ -42,6 +42,7 @@
     "cpx": "^1.5.0"
   },
   "dependencies": {
+    "@freshworks-jaya/utilities": "0.2.1",
     "axios": "^0.19.2",
     "handlebars": "^4.7.6",
     "handlebars-helpers": "^0.10.0",
