--- a/packages/freshchat-api/package.json
+++ b/packages/freshchat-api/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@freshworks-jaya/freshchat-api",
-  "version": "0.6.0",
+  "version": "0.7.0-alpha.6",
   "description": "Provides simple interface for accessing Freshchat's public APIs",
   "repository": "git@github.com:freshdesk/jaya-lib.git",
   "main": "lib/index.js",
@@ -13,7 +13,7 @@
     "watch": "tsc --watch --incremental",
     "coverage": "codecov",
     "test": "nyc --reporter=lcov mocha",
-    "build": "tsc",
+    "build": "tsc && cpx ./src/conversation.hbs ./lib",
     "format": "prettier --write \"src/**/*.ts\"",
     "build:check": "tsc --noEmit",
     "lint": "tsc --noEmit && eslint '*/**/*.ts' --quiet --fix",
@@ -29,6 +29,7 @@
     "@types/chai-as-promised": "^7.1.2",
     "@types/mocha": "^7.0.2",
     "@types/node": "^13.11.0",
+    "@types/handlebars-helpers": "^0.5.2",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "codecov": "^3.6.5",
@@ -37,9 +38,14 @@
     "nyc": "^15.0.1",
     "source-map-support": "^0.5.16",
     "ts-node": "^8.8.1",
-    "typescript": "^3.8.3"
+    "typescript": "^3.8.3",
+    "cpx": "^1.5.0"
   },
   "dependencies": {
-    "axios": "^0.19.2"
+    "@freshworks-jaya/utilities": "0.2.1",
+    "axios": "^0.19.2",
+    "handlebars": "^4.7.6",
+    "handlebars-helpers": "^0.10.0",
+    "helper-date": "^1.0.1"
   }
 }
