--- a/packages/freshchat-api/package.json
+++ b/packages/freshchat-api/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@freshworks-jaya/freshchat-api",
-  "version": "0.7.0-alpha.6",
+  "version": "0.7.0",
   "description": "Provides simple interface for accessing Freshchat's public APIs",
   "repository": "git@github.com:freshdesk/jaya-lib.git",
   "main": "lib/index.js",
@@ -27,22 +27,22 @@
     "@istanbuljs/nyc-config-typescript": "^1.0.1",
     "@types/chai": "^4.2.11",
     "@types/chai-as-promised": "^7.1.2",
+    "@types/handlebars-helpers": "^0.5.2",
     "@types/mocha": "^7.0.2",
     "@types/node": "^13.11.0",
-    "@types/handlebars-helpers": "^0.5.2",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "codecov": "^3.6.5",
+    "cpx": "^1.5.0",
     "mocha": "^7.1.1",
     "nock": "^12.0.3",
     "nyc": "^15.0.1",
     "source-map-support": "^0.5.16",
     "ts-node": "^8.8.1",
-    "typescript": "^3.8.3",
-    "cpx": "^1.5.0"
+    "typescript": "^3.8.3"
   },
   "dependencies": {
-    "@freshworks-jaya/utilities": "0.2.1",
+    "@freshworks-jaya/utilities": "^0.2.2",
     "axios": "^0.19.2",
     "handlebars": "^4.7.6",
     "handlebars-helpers": "^0.10.0",
