--- a/packages/freshchat-api/package.json
+++ b/packages/freshchat-api/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@freshworks-jaya/freshchat-api",
-  "version": "0.7.1",
+  "version": "0.7.2",
   "description": "Provides simple interface for accessing Freshchat's public APIs",
   "repository": "git@github.com:freshdesk/jaya-lib.git",
   "main": "lib/index.js",
@@ -13,7 +13,7 @@
     "watch": "tsc --watch --incremental",
     "coverage": "codecov",
     "test": "nyc --reporter=lcov mocha",
-    "build": "tsc && cpx ./src/conversation.hbs ./lib",
+    "build": "tsc && cpx \"src/*.hbs\" ./lib",
     "format": "prettier --write \"src/**/*.ts\"",
     "build:check": "tsc --noEmit",
     "lint": "tsc --noEmit && eslint '*/**/*.ts' --quiet --fix",
