--- a/packages/rule-engine/package.json
+++ b/packages/rule-engine/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@freshworks-jaya/rule-engine",
-  "version": "0.12.5-alpha.0",
+  "version": "0.12.5",
   "description": "Provides methods to process rules in product events in marketplace app",
   "repository": "git@github.com:freshdesk/jaya-lib.git",
   "main": "lib/index.js",
@@ -43,7 +43,7 @@
   "dependencies": {
     "@freshworks-jaya/freshchat-api": "^0.7.2",
     "@freshworks-jaya/kairos-api": "^0.1.0",
-    "@freshworks-jaya/marketplace-models": "^0.1.4-alpha.0",
+    "@freshworks-jaya/marketplace-models": "^0.1.4",
     "@freshworks-jaya/utilities": "^0.2.2",
     "axios": "^0.19.2",
     "bluebird": "^3.7.2"
