--- a/packages/rule-engine/package.json
+++ b/packages/rule-engine/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@freshworks-jaya/rule-engine",
-  "version": "0.12.5",
+  "version": "0.12.6-alpha.0",
   "description": "Provides methods to process rules in product events in marketplace app",
   "repository": "git@github.com:freshdesk/jaya-lib.git",
   "main": "lib/index.js",
@@ -41,9 +41,9 @@
     "typescript": "^3.8.3"
   },
   "dependencies": {
-    "@freshworks-jaya/freshchat-api": "^0.7.2",
+    "@freshworks-jaya/freshchat-api": "^0.7.3-alpha.0",
     "@freshworks-jaya/kairos-api": "^0.1.0",
-    "@freshworks-jaya/marketplace-models": "^0.1.4",
+    "@freshworks-jaya/marketplace-models": "^0.1.5-alpha.0",
     "@freshworks-jaya/utilities": "^0.2.2",
     "axios": "^0.19.2",
     "bluebird": "^3.7.2"
