--- a/packages/freshchat-api/package.json
+++ b/packages/freshchat-api/package.json
@@ -46,6 +46,6 @@
     "axios": "^0.19.2",
     "handlebars": "^4.7.6",
     "handlebars-helpers": "^0.10.0",
-    "helper-date": "^1.0.1"
+    "moment": "^2.29.0"
   }
 }
