lint only files in the src directory

--- a/packages/rule-engine/package.json
+++ b/packages/rule-engine/package.json
@@ -15,7 +15,7 @@
     "test": "nyc --reporter=lcov mocha",
     "build": "tsc",
     "build:check": "tsc --noEmit",
-    "lint": "tsc --noEmit && eslint '*/**/*.ts' --quiet --fix",
+    "lint": "tsc --noEmit && eslint 'src/**/*.ts' --quiet --fix",
     "prepare": "npm run build"
   },
   "keywords": [],
