--- a/packages/freshchat-api/package.json
+++ b/packages/freshchat-api/package.json
@@ -16,7 +16,7 @@
     "build": "tsc && cpx \"src/*.hbs\" ./lib",
     "format": "prettier --write \"src/**/*.ts\"",
     "build:check": "tsc --noEmit",
-    "lint": "tsc --noEmit && eslint '*/**/*.ts' --quiet --fix",
+    "lint": "tsc --noEmit && eslint 'src/**/*.ts' --quiet --fix",
     "prepare": "npm run build",
     "preversion": "npm run lint"
   },
