--- a/packages/rule-engine/package.json
+++ b/packages/rule-engine/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@freshworks-jaya/rule-engine",
-  "version": "0.12.15-alpha.3",
+  "version": "0.12.15-alpha.4",
   "description": "Provides methods to process rules in product events in marketplace app",
   "repository": "git@github.com:freshdesk/jaya-lib.git",
   "main": "lib/index.js",
@@ -41,10 +41,10 @@
     "typescript": "^3.8.3"
   },
   "dependencies": {
-    "@freshworks-jaya/freshchat-api": "^0.7.10-alpha.2",
-    "@freshworks-jaya/kairos-api": "^0.1.0",
-    "@freshworks-jaya/marketplace-models": "^0.1.6",
-    "@freshworks-jaya/utilities": "^0.2.2",
+    "@freshworks-jaya/freshchat-api": "^0.7.10-y.0",
+    "@freshworks-jaya/kairos-api": "^0.1.1-alpha.0",
+    "@freshworks-jaya/marketplace-models": "^0.1.7-alpha.0",
+    "@freshworks-jaya/utilities": "^0.2.3-alpha.0",
     "axios": "^0.19.2",
     "bluebird": "^3.7.2"
   }
