--- a/packages/rule-engine/package.json
+++ b/packages/rule-engine/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@freshworks-jaya/rule-engine",
-  "version": "0.12.31-alpha.0",
+  "version": "0.12.31",
   "description": "Provides methods to process rules in product events in marketplace app",
   "repository": "git@github.com:freshdesk/jaya-lib.git",
   "main": "lib/index.js",
@@ -44,10 +44,10 @@
     "typescript": "^4.2.4"
   },
   "dependencies": {
-    "@freshworks-jaya/freshchat-api": "^0.7.20-alpha.0",
-    "@freshworks-jaya/kairos-api": "^0.1.3-alpha.0",
-    "@freshworks-jaya/marketplace-models": "^0.1.8-alpha.0",
-    "@freshworks-jaya/utilities": "^0.2.5-alpha.0",
+    "@freshworks-jaya/freshchat-api": "^0.7.20",
+    "@freshworks-jaya/kairos-api": "^0.1.3",
+    "@freshworks-jaya/marketplace-models": "^0.1.8",
+    "@freshworks-jaya/utilities": "^0.2.5",
     "axios": "^0.21.1",
     "bluebird": "^3.7.2",
     "dayjs": "^1.10.4",
