Added google cloud logging

--- a/packages/rule-engine/package.json
+++ b/packages/rule-engine/package.json
@@ -48,9 +48,11 @@
     "@freshworks-jaya/kairos-api": "^0.1.3",
     "@freshworks-jaya/marketplace-models": "^0.1.8",
     "@freshworks-jaya/utilities": "^0.2.5",
+    "@google-cloud/logging": "^9.2.3",
     "axios": "^0.21.1",
     "bluebird": "^3.7.2",
     "dayjs": "^1.10.4",
+    "googleapis": "^73.0.0",
     "handlebars": "^4.7.7",
     "handlebars-helpers": "^0.10.0",
     "html-to-text": "7.0.0",
