--- a/packages/freshchat-api/package.json
+++ b/packages/freshchat-api/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@freshworks-jaya/freshchat-api",
-  "version": "0.7.35",
+  "version": "0.7.36-beta-01",
   "description": "Provides simple interface for accessing Freshchat's public APIs",
   "repository": "git@github.com:freshdesk/jaya-lib.git",
   "main": "lib/index.js",
@@ -24,31 +24,31 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@istanbuljs/nyc-config-typescript": "^1.0.1",
-    "@types/chai": "^4.2.16",
-    "@types/chai-as-promised": "^7.1.3",
-    "@types/handlebars-helpers": "^0.5.2",
-    "@types/html-to-text": "^8.0.0",
-    "@types/mocha": "^8.2.2",
-    "@types/node": "^15.12.2",
-    "chai": "^4.3.4",
+    "@istanbuljs/nyc-config-typescript": "^1.0.2",
+    "@types/chai": "^4.3.11",
+    "@types/chai-as-promised": "^7.1.8",
+    "@types/handlebars-helpers": "^0.5.6",
+    "@types/html-to-text": "^9.0.4",
+    "@types/mocha": "^10.0.6",
+    "@types/node": "^20.10.0",
+    "chai": "^4.3.10",
     "chai-as-promised": "^7.1.1",
-    "codecov": "^3.8.1",
+    "codecov": "^3.8.3",
     "cpx": "^1.5.0",
-    "mocha": "^9.0.0",
-    "nock": "^13.1.0",
+    "mocha": "^10.2.0",
+    "nock": "^13.4.0",
     "nyc": "^15.1.0",
-    "source-map-support": "^0.5.19",
-    "ts-node": "^10.0.0",
-    "typescript": "^4.3.2"
+    "source-map-support": "^0.5.21",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.3.2"
   },
   "dependencies": {
-    "@freshworks-jaya/utilities": "^1.0.0",
-    "axios": "^0.21.4",
-    "dayjs": "^1.10.5",
-    "handlebars": "^4.7.7",
+    "@freshworks-jaya/utilities": "^1.0.1-beta-01",
+    "axios": "^1.6.2",
+    "dayjs": "^1.11.10",
+    "handlebars": "^4.7.8",
     "handlebars-helpers": "^0.10.0",
-    "html-to-text": "8.0.0"
+    "html-to-text": "^9.0.5"
   },
   "resolutions": {
     "handlebars": "4.7.7"
