--- a/packages/kairos-api/package.json
+++ b/packages/kairos-api/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@freshworks-jaya/kairos-api",
-  "version": "0.1.5",
+  "version": "0.1.6-beta-01",
   "description": "Provides simple interface for accessing Kairos's public APIs",
   "repository": "git@github.com:freshdesk/jaya-lib.git",
   "main": "lib/index.js",
@@ -22,9 +22,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "typescript": "^4.3.2"
+    "typescript": "^5.3.2"
   },
   "dependencies": {
-    "axios": "^0.21.4"
+    "axios": "^1.6.2"
   }
 }
