--- a/packages/rule-engine/package.json
+++ b/packages/rule-engine/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@freshworks-jaya/rule-engine",
-  "version": "0.17.27",
+  "version": "0.17.28-beta-01",
   "description": "Provides methods to process rules in product events in marketplace app",
   "repository": "git@github.com:freshdesk/jaya-lib.git",
   "main": "lib/index.js",
@@ -22,39 +22,39 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@istanbuljs/nyc-config-typescript": "^1.0.1",
-    "@types/bluebird": "^3.5.33",
-    "@types/chai": "^4.2.16",
-    "@types/chai-as-promised": "^7.1.3",
-    "@types/handlebars-helpers": "^0.5.2",
-    "@types/html-to-text": "^8.0.0",
-    "@types/lodash": "^4.14.168",
-    "@types/mocha": "^8.2.2",
-    "@types/node": "^15.12.2",
-    "@types/sinon": "^10.0.2",
-    "chai": "^4.3.4",
+    "@istanbuljs/nyc-config-typescript": "^1.0.2",
+    "@types/bluebird": "^3.5.42",
+    "@types/chai": "^4.3.11",
+    "@types/chai-as-promised": "^7.1.8",
+    "@types/handlebars-helpers": "^0.5.6",
+    "@types/html-to-text": "^9.0.4",
+    "@types/lodash": "^4.14.202",
+    "@types/mocha": "^10.0.6",
+    "@types/node": "^20.10.0",
+    "@types/sinon": "^17.0.2",
+    "chai": "^4.3.10",
     "chai-as-promised": "^7.1.1",
-    "codecov": "^3.8.1",
-    "mocha": "^9.0.0",
-    "nock": "^13.1.0",
+    "codecov": "^3.8.3",
+    "mocha": "^10.2.0",
+    "nock": "^13.4.0",
     "nyc": "^15.1.0",
-    "sinon": "^11.1.1",
-    "source-map-support": "^0.5.19",
-    "ts-node": "^10.0.0",
-    "typescript": "^4.3.2"
+    "sinon": "^17.0.1",
+    "source-map-support": "^0.5.21",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.3.2"
   },
   "dependencies": {
-    "@freshworks-jaya/freshchat-api": "0.7.35",
-    "@freshworks-jaya/kairos-api": "^0.1.5",
-    "@freshworks-jaya/marketplace-models": "0.1.28",
-    "@freshworks-jaya/utilities": "^1.0.0",
-    "@google-cloud/logging": "^9.3.1",
-    "axios": "^0.21.4",
+    "@freshworks-jaya/freshchat-api": "0.7.36-beta-01",
+    "@freshworks-jaya/kairos-api": "^0.1.6-beta-01",
+    "@freshworks-jaya/marketplace-models": "0.1.29-beta-01",
+    "@freshworks-jaya/utilities": "^1.0.1-beta-01",
+    "@google-cloud/logging": "^11.0.0",
+    "axios": "^1.6.2",
     "bluebird": "^3.7.2",
-    "dayjs": "^1.10.5",
-    "handlebars": "^4.7.7",
+    "dayjs": "^1.11.10",
+    "handlebars": "^4.7.8",
     "handlebars-helpers": "^0.10.0",
-    "html-to-text": "8.0.0",
+    "html-to-text": "^9.0.5",
     "lodash": "^4.17.21",
     "querystring": "^0.2.1"
   },
