--- a/packages/utilities/package.json
+++ b/packages/utilities/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@freshworks-jaya/utilities",
-  "version": "1.0.0",
+  "version": "1.0.1-beta-01",
   "description": "Provides a function that can replace placeholders in a string with a given map.",
   "repository": "git@github.com:freshdesk/jaya-lib.git",
   "main": "lib/index.js",
@@ -22,20 +22,20 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@istanbuljs/nyc-config-typescript": "^1.0.1",
-    "@types/chai": "^4.2.16",
-    "@types/mocha": "^8.2.2",
-    "@types/node": "^15.12.2",
-    "chai": "^4.3.4",
-    "codecov": "^3.8.1",
-    "mocha": "^9.0.0",
+    "@istanbuljs/nyc-config-typescript": "^1.0.2",
+    "@types/chai": "^4.3.11",
+    "@types/mocha": "^10.0.6",
+    "@types/node": "^20.10.0",
+    "chai": "^4.3.10",
+    "codecov": "^3.8.3",
+    "mocha": "^10.2.0",
     "nyc": "^15.1.0",
-    "sinon": "^11.1.1",
-    "source-map-support": "^0.5.19",
-    "ts-node": "^10.0.0",
-    "typescript": "^4.3.2"
+    "sinon": "^17.0.1",
+    "source-map-support": "^0.5.21",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.3.2"
   },
   "dependencies": {
-    "moment-timezone": "^0.5.33"
+    "moment-timezone": "^0.5.43"
   }
 }
